# fun_motifs_plugin

./: .gitignore  .just.sh  .justfile  Cargo.toml  README.md  doubles.py  example.toml  vars.py
docs/: Rust_Input_Variables.txt
import/: functions_to_Rust.py
pyext-myrustlib/: Cargo.toml
python/: doubles.py  read_big_files.py
src/: fun_motifs_plugin.rs  lib.rs  main.rs  process.rs  structures.rs  utils.rs
src/process/: cache.rs  overlay.rs  score.rs
src/structures/: log_flag.rs  params_cli.rs
src/utils/: collector.rs  error.rs  help.rs  log_flag.rs  params.rs  python_count_doubles.rs  reader.rs  reformat.rs  writer.rs
