[package]
name = "fun_motifs_plugin"
version = "0.1.0"
authors = [
  "Daniel Rivas <danielrivasmd@gmail.com>",
]
edition = "2021"


[[bin]]
name = "line_counter"
path = "src/bin/line_counter.rs"


[[bin]]
name = "python_plugin"
path = "src/bin/python_plugin.rs"


[lib]
name = "fun_motifs_plugin"
path = "src/fun_motifs_plugin.rs"
# crate-type = ["dylib"]


[dependencies]
anyhow = "1.0.31"
bytelines = "2.4.0"
clap = "3.1.0"
colored = "2.0.0"
derive-new = "0.5.9"
flate2 = "1.0.24"
thiserror = "1.0.37"
