[package]
name = "fun_motifs_plugin"
version = "0.1.0"
authors = [
  "Daniel Rivas <danielrivasmd@gmail.com>",
  "Mark Melzer <mark@fam-melzer.net>"
]
edition = "2021"


[[bin]]
name = "funmotifs"
path = "src/bin/main.rs"


[lib]
name = "fun_motifs_plugin"
path = "src/fun_motifs_plugin.rs"


[dependencies]
anyhow = "1.0.31"
bytelines = "2.2"
clap = { version = "4.1.4", features = ["derive"] }
colored = "2"
config = "0.13.3"
derive-new = "0.5.0"
flate2 = "1.0.22"
itertools = "0.10.3"
thiserror = "1.0.20"
